[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.0"
iana-time-zone = "0.1.61"
clap = { version = "4.5.48", features = ["derive"] }
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
eyre = "0.6.12"
thiserror = "2.0.17"
